# Chaser-Agent

./: .env.example  .gitignore  CHASEOS_EXTRACTION_MANIFEST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Chaser_Agent_Research_Eval_Register.xlsx  GOVERNANCE.md  HANDOVER.md  LICENSE  MODEL_LICENSES.md  NEXT_STEPS.md  NOTICE.md  README.md  SECURITY.md  SKILL_LICENSES.md  START_HERE.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  pyproject.toml
07_LOGS/Agent-Activity/: 2026-06-16-hermes-strikezone-workflow-runtime-thread-scaffold.md
07_LOGS/Operator-Briefs/: 2026-06-16-Hermes-StrikeZone-Workflow-Runtime-Thread-Scaffold.md
docs/: 00_START_HERE.md
docs/01_Product/: Chaser-Agent-17-Layer-Architecture.md  Chaser-Agent-From-First-Principles.md  Chaser-Agent-Layer-0-Behaviour-Contract.md  Chaser-Agent-Product-Thesis.md  Chaser-Agent-Repo-Boundary.md  Chaser-Agent-Roadmap.md  Chaser-Agent-V0-Blueprint.md  Chaser-Agent-V0-Definition.md
docs/02_Evals/: Chaser-Agent-Dataset-Plan.md  Chaser-Agent-Eval-Families.md  Chaser-Agent-Eval-Harness.md  Chaser-Agent-Human-Operator-Rubric.md  Chaser-Agent-Tool-Use-Mini-Eval.md  (+3 more)
research_intake/: README.md  __init__.py  cron_proposal.yaml  ingest.py  queries.yaml  ranking.yaml  sources.yaml
scripts/: __init__.py  run_eval_smoke.py  validate_jsonl.py  weekly_research_intake_dry_run.py
tests/: test_chaseos_native_packet.py  test_eval_runner_smoke.py  test_jsonl_datasets.py  test_repo_scaffold.py  test_research_intake_ingest.py  test_skillgate_harness.py  test_source_card_harness.py  test_summary_schema.py  test_weekly_research_intake_config.py
(+80 files in other folders)
